
    - PyObjCRT_AlignOfType

    - PyObjCRT_SELName

    - PyObjCRT_SimplifySignature

    - PyObjC_RegisterStructType

    - PyObjCObject_IsUninitialized

    - PyObjCObject_New

    - PyObjCCreateOpaquePointerType

    .. note::

       There will be futher cleanup of this API before the 3.0 release.

    Added a *name* argument to PyObjCPointerWrapper_Register.


Version 2.6
-----------

.. note::

   This is version currently in development and has not been released yet

Version 2.5.1
-------------

- PyObjC could crash when calling a method that is dynamicly generated
  (that is, the selector is not present in the class according to the
  Objective-C runtime but the instance responds to it anyway).

  The cases that used to crash now raise :exc:`objc.error` instead.

  .. note::
     It is highly unlikely that real code would run into this, found
     while working on PyObjC 3.x.

- When writing a python unicode object to an NSArchiver or NSKeyedArchiver
  the object is now stored exactly the same as a normal NSString, and will
  be read back as such.

  This increases interoperability with code that expects to read back a
  non-keyed archive in a different proces. An example of this is the use
  of Growl (see issue #31)

  Instances of subclasses of unicode are not affected by this change, and
  can only be read back by other PyObjC programs.

- Issue #43: It was no longer possible to create instances of
  LaunchServices.LSLaunchURLSpec due to incomplete metadata.

- Issue #41: the 'install.py' script in the root of pyobjc repository
  failed to perform an install when running in a clean checkout of the tree.

- Issue #44: the various Cocoa frameworks only export @protocol defintions when
  they happen to be used by code in the framework. Added extensions to the
  various framework wrappers to ensure that all protocols are available to
  python code.

- Opaque pointer types now can be constructed with a "c_void_p" keyword